# airbnb_dbt

./: pyproject.toml
airbnb/: .gitignore  dbt_project.yml  package-lock.yml
airbnb/macros/: no_empty_strings.sql  select_positive_values.sql
airbnb/models/: dashboards.yml  schema.yml  sources.yml
airbnb/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
airbnb/models/fct/: fct_reviews.sql
airbnb/models/mart/: mart_fullmoon_reviews.sql
airbnb/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
airbnb/tests/: consistent_created_at.sql
airbnb/tests/generic/: minimum_row_count.sql  positive_values.sql
my_dbt_dagster_project/: pyproject.toml  setup.py
my_dbt_dagster_project/my_dbt_dagster_project/: project.py
