[project]
name = "dbt-bootcamp"
version = "1.11.0"
# Limit to 3.12 to ensure library compatibility
requires-python = ">=3.10,<3.13" 
dependencies = [
    "dbt-core~=1.11.0",
    "dbt-databricks~=1.11.0",
    "dbt-autofix~=0.19.0",
    "dagster~=1.12.0",
    "dagster-dbt~=0.28.0", # Revert to the stable 0.x branch
    "dagster-webserver~=1.12.0",
]